feat: implementação do end point de buscar todos os usuários que estão cadastrados no banco de dados

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
+DATABASE_URL="postgresql://USER:PASSWORD@localhostT:PORT/DATABASE"
 PORTA="porta padrão é 3000."
