--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "main": "./src/server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./dist/server.js",
+    "build": "rimraf ./dist && tsc",
+    "preServer": "npm run build",
+    "server": " concurrently \"nodemon ./dist/server.js\"   \"tsc -w\" "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.0",
+    "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
