finalizando o crud de colaborador interno, somente com a ausência do campo de atualizar colaborador

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "nodemon ./dist/server.js",
     "build": "rimraf ./dist && tsc",
-    "preServer": "npm run build",
+    "preServer": "npm run build && npm run server",
     "server": " concurrently \"nodemon ./dist/server.js\"   \"tsc -w\" "
   },
   "author": "",
