--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "nodemon": "^3.1.7",
