criando seeds, e iniando o metodo update

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
-PORTA="porta padrão é 3000."
+DATABASE_URL="mysql://root:1234@localhost:3306/alocacao?schema=public"
+PORTA= 3000
