--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
+    "@types/swagger-ui-express": "^4.1.7",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,7 +25,9 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "swagger": "^0.7.5",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
