--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preServer": "npm run build && npm run server",
     "server": " concurrently \"nodemon ./dist/server.js\"   \"npx tsc -w\" "
   },
+  "prisma": {
+    "seed": "node ./dist/seeds/school.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -30,6 +33,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.5.0",
     "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "nodemon": "^3.1.7",
